Updated header include. Updated Playbook assets.

--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,9 @@
 layout: default
 title: David Calhoun, Designer &amp; Developer
 ---
-
-<header class="header-primary">
-  <a href="/" class="mark">DC</a>
-
+<section class="wrap-flush">
   <div class="me"></div>
-</header>
+</section>
 
 <section class="welcome wrap">
   <h1>David Calhoun</h1>
@@ -41,7 +38,7 @@ title: David Calhoun, Designer &amp; Developer
 
   <ul class="list-bars">
     <li>
-      <a href="mailto:hello@davidcalhoun.me">Mail</a>
+      <a href="mailto:dpcalhoun@gmail.com">Mail</a>
     </li>
     <li>
       <a href="http://twitter.com/david_calhoun">Twitter</a>
