--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,9 @@ title: David Calhoun, Designer &amp; Developer
       <a href="mailto:dpcalhoun@gmail.com">Mail</a>
     </li>
     <li>
+      <a href="/blog">Blog</a>
+    </li>
+    <li>
       <a href="http://twitter.com/david_calhoun">Twitter</a>
     </li>
     <li>
