--- a/app/404.html
+++ b/app/404.html
@@ -1,8 +1,38 @@
----
-layout: default
----
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>{{ page.title }}</title>
+    <meta name="description" content="David Calhoun is a freelance designer &amp; developer in Nashville, TN. He specializes in UX design and front end development, with experience in Ruby on Rails, Ember.js, WordPress &amp; Drupal.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<article class="wrap text-center">
-  <h1>404 &mdash; Page Not Found</h1>
-  <p>Sorry, but the page you were looking for does not exist.</p>
-</article>
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
+    <!-- build:css({app,.tmp}) /assets/css/main.css -->
+    <link rel="stylesheet" href="/_bower_components/normalize-css/normalize.css">
+    <link rel="stylesheet" href="/assets/css/syntax.css">
+    <link rel="stylesheet" href="/assets/css/screen.css">
+    <!-- endbuild -->
+
+    <script type="text/javascript" src="//use.typekit.net/efm1mqc.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  </head>
+  <body>
+    <!--[if lt IE 7]>
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+
+    <header class="wrap-flush">
+      <a href="/" class="mark">DC</a>
+    </header>
+
+    <article class="wrap text-center">
+      <h1>404 &mdash; Page Not Found</h1>
+      <p>Sorry, but the page you were looking for does not exist.</p>
+    </article>
+  </body>
+</html>
