--- a/app/404.html
+++ b/app/404.html
@@ -6,13 +6,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{ page.title }}</title>
+    <title>404 Page Not Found | David Calhoun, Designer &amp; Developer</title>
     <meta name="description" content="David Calhoun is a freelance designer &amp; developer in Nashville, TN. He specializes in UX design and front end development, with experience in Ruby on Rails, Ember.js, WordPress &amp; Drupal.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <!-- build:css({app,.tmp}) /assets/css/main.css -->
+    <!-- build:css({app,.tmp}) /assets/css/app.css -->
     <link rel="stylesheet" href="/_bower_components/normalize-css/normalize.css">
     <link rel="stylesheet" href="/assets/css/syntax.css">
     <link rel="stylesheet" href="/assets/css/screen.css">
@@ -34,5 +34,14 @@
       <h1>404 &mdash; Page Not Found</h1>
       <p>Sorry, but the page you were looking for does not exist.</p>
     </article>
+
+    <script>
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-8230270-3');ga('send','pageview');
+    </script>
   </body>
 </html>
