--- a/app/404.html
+++ b/app/404.html
@@ -12,7 +12,7 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <!-- build:css({app,.tmp}) /assets/css/app.css -->
+    <!-- build:css({app,.tmp}) /assets/css/main.css -->
     <link rel="stylesheet" href="/_bower_components/normalize-css/normalize.css">
     <link rel="stylesheet" href="/assets/css/syntax.css">
     <link rel="stylesheet" href="/assets/css/screen.css">
