Update work list.

--- a/app/index.html
+++ b/app/index.html
@@ -19,13 +19,13 @@ title: David Calhoun, Designer &amp; Developer
       <a href="http://library.vanderbilt.edu">Vanderbilt Library</a>
     </li>
     <li>
+      <a href="http://tlap.org">TLAP</a>
+    </li>
+    <li>
       <a href="https://www.entreleadership.com/">EntreLeadership</a>
     </li>
     <li>
       <a href="http://centresource.com">Centresource</a>
-    </li>
-    <li>
-      <a href="http://my.pearlpoint.org">PearlPoint</a>
     </li>
     <li>
       <a href="https://github.com/centresource/generator-playbook">Playbook</a>
