--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,9 @@ title: David Calhoun, Designer &amp; Developer
     <li>
       <a href="https://github.com/centresource/generator-playbook">Playbook</a>
     </li>
+    <li>
+      <a href="https://github.com/dcalhoun/alfred-remote-inspector-workflow">Alfred Remote Inspector Workflow</a>
+    </li>
   </ul>
 </section>
 
