Update work link.

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@ title: David Calhoun, Designer &amp; Developer
       <a href="http://centresource.com">Centresource</a>
     </li>
     <li>
-      <a href="https://github.com/centresource/generator-playbook">Playbook</a>
+      <a href="http://centresource.github.io/generator-playbook/">Playbook</a>
     </li>
     <li>
       <a href="https://github.com/dcalhoun/alfred-remote-inspector-workflow">Alfred Remote Inspector Workflow</a>
