Add projects list.

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,13 @@ title: David Calhoun, Designer &amp; Developer
     <li>
       <a href="http://centresource.com">Centresource</a>
     </li>
+  </ul>
+</section>
+
+<section class="projects wrap">
+  <h1>Projects</h1>
+
+  <ul class="list-bars">
     <li>
       <a href="http://centresource.github.io/generator-playbook/">Playbook</a>
     </li>
