--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,12 @@ title: David Calhoun, Designer &amp; Developer
 
   <ul class="list-bars">
     <li>
+      <a href="http://www.athletebiz.us/">AthleteBiz</a>
+    </li>
+    <li>
+      <a href="http://www.stewardship.com/">Stewardship</a>
+    </li>
+    <li>
       <a href="http://library.vanderbilt.edu">Vanderbilt Library</a>
     </li>
     <li>
