Update current company.

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@ title: David Calhoun, Designer &amp; Developer
 
 <section class="welcome wrap">
   <h1>David Calhoun</h1>
-  <p>I enjoy creating things that people love to use. My primary skills are UX design &amp; front end development. I have experience in Ruby on Rails, Ember.js, Backbone.js, WordPress &amp; Drupal. I am currently a Senior UI/UX Designer at <a href="https://www.healthteacher.com/">HealthTeacher</a> in Nashville, TN.</p>
+  <p>I enjoy creating things that people love to use. My primary skills are UX design &amp; front end development. I have experience in Ruby on Rails, Ember.js, Backbone.js, WordPress &amp; Drupal. I am currently a Senior UI/UX Designer at <a href="http://www.gonoodle.com/">GoNoodle</a> in Nashville, TN.</p>
 </section>
 
 <section class="work wrap">
