--- a/app/index.html
+++ b/app/index.html
@@ -16,22 +16,22 @@ title: David Calhoun, Designer &amp; Developer
 
   <ul class="list-bars">
     <li>
-      <a href="http://www.athletebiz.us/">AthleteBiz</a>
+      <a href="https://www.gonoodle.com/">GoNoodle</a>
     </li>
     <li>
       <a href="http://www.stewardship.com/">Stewardship</a>
     </li>
     <li>
-      <a href="http://library.vanderbilt.edu">Vanderbilt Library</a>
-    </li>
-    <li>
-      <a href="http://tlap.org">TLAP</a>
-    </li>
-    <li>
       <a href="https://www.entreleadership.com/">EntreLeadership</a>
     </li>
     <li>
-      <a href="http://centresource.com">Centresource</a>
+      <a href="http://library.vanderbilt.edu">Vanderbilt Library</a>
+    </li>
+    <li>
+      <a href="http://www.athletebiz.us/">AthleteBiz</a>
+    </li>
+    <li>
+      <a href="http://tlap.org">TLAP</a>
     </li>
   </ul>
 </section>
