feat: Explore primary navigation position

--- a/parts/header.html
+++ b/parts/header.html
@@ -1,3 +1,5 @@
-<!-- wp:group -->
-<div class="wp-block-group"><!-- wp:navigation /--></div>
+<!-- wp:group {"className":"navigation-primary"} -->
+<div class="wp-block-group navigation-primary">
+  <!-- wp:navigation {"overlayMenu":"never"} /-->
+</div>
 <!-- /wp:group -->
