--- a/parts/header.html
+++ b/parts/header.html
@@ -1,5 +1,7 @@
-<!-- wp:group {"className":"navigation-primary"} -->
-<div class="wp-block-group navigation-primary">
-  <!-- wp:navigation {"overlayMenu":"never"} /-->
+<!-- wp:group -->
+<div class="wp-block-group">
+  <!-- wp:navigation {"overlayMenu":"never","layout":{"type":"flex","orientation":"vertical"}} -->
+  <!-- wp:page-list /-->
+  <!-- /wp:navigation -->
 </div>
 <!-- /wp:group -->
