--- a/parts/header.html
+++ b/parts/header.html
@@ -1,25 +1,13 @@
 <!-- wp:group {"style":{"spacing":{"margin":{"top":"var:preset|spacing|50","bottom":"var:preset|spacing|50"}}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
-<div
-  class="wp-block-group"
-  style="
-    margin-top: var(--wp--preset--spacing--50);
-    margin-bottom: var(--wp--preset--spacing--50);
-  "
->
-  <!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"}} -->
-  <div class="wp-block-group">
-    <!-- wp:site-logo /-->
+<div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--50);margin-bottom:var(--wp--preset--spacing--50)"><!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"}} -->
+<div class="wp-block-group"><!-- wp:site-logo /-->
 
-    <!-- wp:site-title /-->
-  </div>
-  <!-- /wp:group -->
+<!-- wp:site-title /--></div>
+<!-- /wp:group -->
 
-  <!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"right"}} -->
-  <div class="wp-block-group">
-    <!-- wp:navigation {"ref":31,"overlayMenu":"never","layout":{"type":"flex","orientation":"horizontal","justifyContent":"center"}} /-->
+<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"right"}} -->
+<div class="wp-block-group"><!-- wp:navigation {"ref":31,"overlayMenu":"never","layout":{"type":"flex","orientation":"horizontal","justifyContent":"center"}} /-->
 
-    <!-- wp:search {"label":"Search","showLabel":false,"placeholder":"Search","buttonText":"Search","buttonPosition":"no-button"} /-->
-  </div>
-  <!-- /wp:group -->
-</div>
+<!-- wp:search {"label":"Search","showLabel":false,"placeholder":"Search","buttonText":"Search","buttonPosition":"no-button","style":{"color":{"background":"#d04646"}},"textColor":"primary","fontSize":"base"} /--></div>
+<!-- /wp:group --></div>
 <!-- /wp:group -->
