feat: Style search input

--- a/parts/header.html
+++ b/parts/header.html
@@ -18,7 +18,7 @@
   <div class="wp-block-group">
     <!-- wp:navigation {"ref":31,"layout":{"type":"flex","orientation":"horizontal","justifyContent":"center"}} /-->
 
-    <!-- wp:search {"label":"Search","showLabel":false,"placeholder":"Search","buttonText":"Search","buttonPosition":"no-button","style":{"color":{"background":"#d04646"}},"textColor":"primary","fontSize":"base"} /-->
+    <!-- wp:search {"label":"Search","showLabel":false,"placeholder":"Search","buttonText":"Search","buttonPosition":"no-button"} /-->
   </div>
   <!-- /wp:group -->
 </div>
