fix: Remove footer white space

--- a/parts/footer.html
+++ b/parts/footer.html
@@ -18,8 +18,7 @@
     <div class="wp-block-group">
       <!-- wp:paragraph {"align":"center","fontSize":"base"} -->
       <p class="has-text-align-center has-base-font-size">
-        Proudly powered by
-        <a rel="nofollow" href="https://wordpress.org">WordPress</a>
+        Proudly powered by <a rel="nofollow" href="https://wordpress.org">WordPress</a>
       </p>
       <!-- /wp:paragraph -->
     </div>
