--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,6 +1,6 @@
 <!-- wp:group {"align":"full","style":{"spacing":{"padding":{"top":"var:preset|spacing|50","right":"var:preset|spacing|30","bottom":"var:preset|spacing|50","left":"var:preset|spacing|30"},"margin":{"top":"var:preset|spacing|40","bottom":"var:preset|spacing|40"}}},"className":"has-background-color","layout":{"type":"default"}} -->
 <div
-  class="wp-block-group alignfull has-background-color"
+  class="wp-block-group alignfull"
   style="
     margin-top: var(--wp--preset--spacing--40);
     margin-bottom: var(--wp--preset--spacing--40);
@@ -12,14 +12,12 @@
 >
   <!-- wp:group {"align":"full","style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"nowrap"},"fontSize":"small"} -->
   <div class="wp-block-group alignfull has-small-font-size">
-    <!-- wp:site-title {"style":{"layout":{"selfStretch":"fixed","flexSize":"25%"}},"fontSize":"base"} /-->
+    <!-- wp:site-title {"style":{"layout":{"selfStretch":"fixed","flexSize":"25%"}},"fontSize":"medium"} /-->
 
     <!-- wp:group {"style":{"layout":{"selfStretch":"fill","flexSize":null}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"center"}} -->
     <div class="wp-block-group">
-      <!-- wp:paragraph {"align":"center","fontSize":"base"} -->
-      <p class="has-text-align-center has-base-font-size">
-        Proudly powered by <a rel="nofollow" href="https://wordpress.org">WordPress</a>
-      </p>
+      <!-- wp:paragraph {"align":"center","fontSize":"medium"} -->
+      <p class="has-text-align-center has-medium-font-size">Proudly powered by <a rel="nofollow" href="https://wordpress.org">WordPress</a></p>
       <!-- /wp:paragraph -->
     </div>
     <!-- /wp:group -->
